Agregado de la opcion de filtrado

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
             </nav>
         </header>
         <section>
+            <div class="filtrado">
+                <h3>CATEGORÍAS DEL PRODUCTO</h3>
+                <ul>
+                    <li>Para niños</li>
+                    <li>Para hombres</li>
+                    <li>Para mujeres</li>
+                    <li>Para niñas</li>
+                </ul>
+            </div>
+            <div class="galeria">
+
+            </div>
         </section>
     </div>
 </body>
